--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
-    "paper-input": "PolymerElements/paper-input#^1.1.20"
+    "paper-input": "PolymerElements/paper-input#^1.1.20",
+    "iron-list": "PolymerElements/iron-list#^1.3.11"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
