--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "My App",
   "start_url": "/?homescreen=1",
   "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#3f51b5",
+  "theme_color": "#555555",
+  "background_color": "#555555",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
