--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "NASA OSS",
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#252C32",
-  "background_color": "#050D1A",
+  "theme_color": "#21292E",
+  "background_color": "#21292E",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
