--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "background_color": "#21292E",
   "icons": [
     {
-      "src": "images/manifest/icon-192x192.png",
+      "src": "images/logos/nasa-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/manifest/icon-512x512.png",
+      "src": "images/logos/nasa-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
