Use ArcaMajora3 font

--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,10 @@ handlers:
   static_dir: data
   secure: always
 
+- url: /fonts
+  static_dir: fonts
+  secure: always
+
 - url: /images
   static_dir: images
   secure: always
