--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-node_modules
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/bower_components
+
+# misc
+npm-debug.log
+
+# System Files
+.DS_Store
+Thumbs.db
