--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/bower_components
+node_modules/
 
 # misc
 npm-debug.log
