--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ node_js:
   - '5'
   - '4'
 before_script:
-  - npm install -g bower polymer-cli@1.9.7
+  - npm install -g bower
+  - npm install -g polymer-cli@6.4.1
   - bower install
 script:
   - xvfb-run polymer test
