--- a/data/license_mappings.json
+++ b/data/license_mappings.json
@@ -93,7 +93,7 @@
    },
    "NASA Open Source": {
     "License Long Name": "NASA Open Source 3.0",
-    "License Link": "http://opensource.org/licenses/NASA-1.3"
+    "License Link": "https://opensource.org/license/nasa1-3-php/"
    },
    "NCSA": {
     "License Long Name": "NCSA/University of Illinois Open Source License",
@@ -105,7 +105,7 @@
    },
    "Pending Release": {
     "License Long Name": "Pending Release",
-    "License Link": "http://opensource.org/licenses/NASA-1.3"
+    "License Link": "https://opensource.org/license/nasa1-3-php/"
    },
    "Public Domain": {
     "License Long Name": "Public Domain",
